--- a/src/components/Stage/Stage.css
+++ b/src/components/Stage/Stage.css
@@ -3,6 +3,7 @@
   height: 100%;
   min-height: 100px;
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAALUlEQVQ4jWNUU9f8z0BFwAIyipeXl2omMlHTdaMGjho4auCogaMG0spABgYGAK6EAcZotCgmAAAAAElFTkSuQmCC');
+  background-size: 14px 14px;
   position: relative;
-  overflow: scroll;
+  overflow: hidden;
 }
