🚀 New node editor prop `circularBehavior`
3 possible values:
- `allow` Allows circular connections with no warning.
- `warn` Allows circular connections with a warning
- `prevent` Default. Circular connections are not allowed with a warning.

--- a/src/components/Toaster/Toaster.css
+++ b/src/components/Toaster/Toaster.css
@@ -31,6 +31,7 @@
   font-size: 14px;
   display: flex;
   flex-direction: column;
+  will-change: transform;
   &[data-type="danger"]{
     background: rgb(255, 116, 137);
     border-color: rgb(254, 99, 136);
