--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -1,13 +1,13 @@
-.wrapper{
+.wrapper {
   font-size: 14px;
   padding: 3px 6px;
   border-radius: 4px;
-  background: linear-gradient(to top, #5b5f62, #6f7477);
+  background: linear-gradient(to bottom, #6c7073, #838a8e);
   width: 100%;
   border: 1px solid #3c3e40;
   padding-right: 15px;
   position: relative;
-  &::after{
+  &::after {
     content: "";
     position: absolute;
     background: none;
@@ -19,28 +19,28 @@
     border-width: 6px 5px 0 5px;
     border-color: #191b1c transparent transparent transparent;
   }
-  &:hover{
-    background: linear-gradient(to top, #63676a, #777b7e);
+  &:hover {
+    background: linear-gradient(to bottom, #7c8387, #969da1);
   }
 }
-.chipWrapper{
+.chipWrapper {
   font-size: 14px;
   padding: 3px 6px;
   border-radius: 4px;
-  background: linear-gradient(to top, #5b5f62, #6f7477);
+  background: linear-gradient(to top, #63676a, #787d80);
   border: 1px solid #3c3e40;
   margin: 2px;
   position: relative;
 }
-.chipWrapper:hover .deleteButton{
+.chipWrapper:hover .deleteButton {
   opacity: 1;
 }
-.chipsWrapper{
+.chipsWrapper {
   display: flex;
   flex-direction: column;
   margin-bottom: 6px;
 }
-.deleteButton{
+.deleteButton {
   position: absolute;
   right: 0px;
   top: 0px;
@@ -56,13 +56,13 @@
   font-weight: bold;
   opacity: 0;
 }
-.deleteButton:focus{
+.deleteButton:focus {
   opacity: 1;
 }
-.deleteButton:hover{
+.deleteButton:hover {
   background: linear-gradient(to top, #64696c, #797f82);
 }
-.selectedWrapper{
+.selectedWrapper {
   display: flex;
   flex-direction: column;
   border-radius: 4px;
@@ -73,7 +73,7 @@
   padding: 3px 6px;
   padding-right: 15px;
   position: relative;
-  &::after{
+  &::after {
     content: "";
     position: absolute;
     background: none;
@@ -85,10 +85,10 @@
     border-width: 6px 5px 0 5px;
     border-color: #191b1c transparent transparent transparent;
   }
-  label{
+  label {
     margin: 0px;
   }
-  p{
+  p {
     margin: 0px;
     margin-top: 5px;
     font-size: 12px;
