--- a/src/components/TextInput/TextInput.css
+++ b/src/components/TextInput/TextInput.css
@@ -1,9 +1,9 @@
-.wrapper{
+.wrapper {
   background: none;
   border: none;
 }
-.input{
-  background: linear-gradient(to bottom, #5b5f62, #6f7477);
+.input {
+  background: linear-gradient(to bottom, #6c7073, #838a8e);
   width: 100%;
   border: 1px solid #3c3e40;
   border-radius: 4px;
@@ -11,10 +11,10 @@
   padding: 5px;
   resize: vertical;
   outline: none;
-  &::placeholder{
+  &::placeholder {
     color: rgb(47, 49, 50);
   }
-  &:focus{
-    background: linear-gradient(to bottom, #676b6e, #75797c);
+  &:focus {
+    background: linear-gradient(to bottom, #7c8286, #99a0a4);
   }
 }
